<resources>
    <string name="app_name">TabGen</string>
    <string name="welcome">WELCOME</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>
    <string name="tabgen">TabGen</string>
    <string name="create_roles">Create Roles</string>
    <string name="create_tabs">Create Tabs</string>
    <string name="create_tabstrips">Create Tab Strips</string>
    <string name="create_users">Create Users</string>
    <string name="create_user_roles">Create Role</string>
    <string name="role_name">Role Name</string>
    <string name="OU">Organization Unit</string>
    <string name="role_type">Role Type</string>
    <string name="create">CREATE</string>
    <string name="logout">Logout</string>
    <string name="create_user">Create User</string>
    <string name="title_activity_landing">TabGen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tempLayoutHelp">Login as</string>
    <string name="title_activity_super_admin">SuperAdminActivity</string>
    <string name="title_activity_admin">Admin</string>
</resources>
