<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.nganthoi.salai.tabgen.CreateRoleActivity">
        <android.support.v7.widget.Toolbar
            android:id="@+id/customToolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ee619c"
            android:label="@string/create_user_roles"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customToolbar"
            android:id="@+id/linearLayout"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/role_name"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/roleName"
                android:background="@drawable/edittext_style"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/OU"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/OrgUnit"
                android:background="@drawable/edittext_style"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/role_type"
                android:id="@+id/or" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/RoleType"
                android:background="@drawable/edittext_style"
                android:padding="5dp" />
            <TextView
                android:layout_height="40dp"
                android:layout_width="match_parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/creatRole"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>

