<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="false">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/welcome"
        android:textSize="45sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#5aa1fe"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/welcome"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="70dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/username"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/small_green_email_icon"
            android:background="@drawable/edittext_style"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:id="@+id/textView2"
            android:layout_gravity="bottom"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:drawableLeft="@drawable/small_green_password_icon"
            android:background="@drawable/edittext_style"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="#5698e3"
            android:drawableLeft="@drawable/help_icon"
            android:textColorHighlight="#fefcae"
            android:textStyle="italic"
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/forgotPassword"
            android:typeface="serif"
            android:layout_below="@+id/password"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout5"
        android:layout_below="@+id/rememberMe"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/signIn"
            android:background="@drawable/button_background"
            android:textColor="#fcfafa"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="      "
            android:id="@+id/textView3" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/signUp"
            android:textColor="#fcfafa"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_background" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me"
        android:id="@+id/rememberMe"
        android:checked="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp" />

</RelativeLayout>
</ScrollView>
